fix: Replace deprecated edgegrid with akamai-edgegrid v4.0.0
- Switch from deprecated edgegrid@3.0.8 to maintained akamai-edgegrid@4.0.0
- Update EdgeGrid client to use new API (clientToken, clientSecret, accessToken, host)
- Fix authentication to use auth().send() chaining pattern
- Use qs property for query parameters instead of manual URL building
- Removes 7 critical/high severity vulnerabilities (13 → 6 moderate)

Breaking changes in akamai-edgegrid v4:
- Constructor now takes individual parameters instead of options object
- auth() returns chainable object for send()
- No setTimeout/abort support (removed timeout handling)

Resolves: npm install errors with 'No matching version found for edgegrid@^3.5.0'

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "akamai-mcp-server",
-  "version": "2.0.0",
-  "description": "Model Context Protocol server with complete Akamai API coverage via dynamic OpenAPI tool generation",
+  "version": "3.0.0",
+  "description": "Enterprise-grade Model Context Protocol server with complete Akamai API coverage via dynamic OpenAPI tool generation",
   "type": "module",
   "main": "dist/index.js",
   "bin": {
@@ -36,7 +36,7 @@
   "license": "MIT",
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.0.4",
-    "edgegrid": "^3.0.8",
+    "akamai-edgegrid": "^4.0.0",
     "axios": "^1.7.9",
     "winston": "^3.17.0",
     "dotenv": "^16.4.7",
